objects/QuoteLineItem/fields/ELV_ActiveOperatorsScreenShare__c.field-meta.xml
<CustomField>
    <fullName>ELV_ActiveOperatorsScreenShare__c</fullName>
    <formula>Quote.ELV_Active_Operators_Screen_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Operators (Screen Share)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>