objects/QuoteLineItem/fields/ELV_AdditionalDiscountUnit__c.field-meta.xml
<CustomField>
    <fullName>ELV_AdditionalDiscountUnit__c</fullName>
    <label>Additional Discount Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>