objects/QuoteLineItem/fields/ELV_Advantage_Plus_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Advantage_Plus_Partner_Discount__c</fullName>
    <label>DEPRECATED - Advantage Plus Partner Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>