objects/QuoteLineItem/fields/ELV_AEM_Endpoint_Management_Overlap_SKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_AEM_Endpoint_Management_Overlap_SKU__c</fullName>
    <formula>Product2.AEM_Endpoint_Management_Overlap_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Endpoint Management Overlap SKU</label>
    <type>Checkbox</type>
</CustomField>