objects/QuoteLineItem/fields/ELV_AEM_Incident_Response_Overlap_SKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_AEM_Incident_Response_Overlap_SKU__c</fullName>
    <formula>Product2.AEM_Incident_Response_Overlap_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Incident Response Overlap SKU</label>
    <type>Checkbox</type>
</CustomField>