objects/QuoteLineItem/fields/ELV_AEM_Risk_Compliance_Overlap_SKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_AEM_Risk_Compliance_Overlap_SKU__c</fullName>
    <formula>Product2.AEM_Risk_Compliance_Overlap_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Risk &amp; Compliance Overlap SKU</label>
    <type>Checkbox</type>
</CustomField>