objects/QuoteLineItem/fields/ELV_AEM_Solution__c.field-meta.xml
<CustomField>
    <fullName>ELV_AEM_Solution__c</fullName>
    <formula>Product2.AEM_Solution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Solution</label>
    <type>Checkbox</type>
</CustomField>