objects/QuoteLineItem/fields/ELV_AEM_Solution_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ELV_AEM_Solution_Mapping__c</fullName>
    <label>AEM Solution Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tanium Core Plus - Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Core Plus - Subscription</fullName>
            </value>
            <value>
                <fullName>Tanium Core Standard - Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Core Plus - Tanium Cloud for US Government</fullName>
            </value>
            <value>
                <fullName>Tanium Endpoint Management Plus - Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Endpoint Management Plus - Subscription</fullName>
            </value>
            <value>
                <fullName>Tanium Endpoint Management Standard -Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Endpoint Management Plus - Tanium Cloud for US Government</fullName>
            </value>
            <value>
                <fullName>Tanium Risk &amp; Compliance Plus - Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Risk &amp; Compliance Plus - Subscription</fullName>
            </value>
            <value>
                <fullName>Tanium Risk &amp; Compliance Standard - Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Risk &amp; Compliance Plus - Tanium Cloud for US Government</fullName>
            </value>
            <value>
                <fullName>Tanium Incident Response - Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Incident Response - Subscription</fullName>
            </value>
            <value>
                <fullName>Tanium Incident Response - Tanium Cloud for US Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>