objects/QuoteLineItem/fields/ELV_Annual_ESR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Annual_ESR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual ESR</label>
    <type>Checkbox</type>
</CustomField>