objects/QuoteLineItem/fields/ELV_ARR_After_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_After_Marketplace__c</fullName>
    <formula>ELV_ARR_Amount__c - (ELV_ARR_Amount__c * Quote.ELV_Marketplace_ARR_Impact_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR After Marketplace</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>