objects/QuoteLineItem/fields/ELV_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_Amount__c</fullName>
    <description>TNCI-206 / ELV-DM-010; TNCI-139 / ELV-CPQ-036; GAP-01. Annual run-rate for the line. Summary Items and excluded products return 0.00. Ruby__NetSalesPrice__c is already an annual per-unit rate. For TNCI-208 eligible third-party lines, calculated OEM fee is a transaction-term amount and is divided by the prorate multiplier before it reduces annual ARR. This produces net-to-Tanium ARR without changing non-third-party line calculations.</description>
    <formula>IF( OR( ELV_Product_Exclude_from_ARR__c, ELV_Exclude_from_ARR__c, ISPICKVAL( Ruby__LineType__c, &quot;SummaryItem&quot; ), ELV_ProrateMultiplier__c = 0 ), 0.00, IF( ELV_Has_Tanium_Pricing_Schedule__c, ELV_Unit_Price_Variance__c * Ruby__ActualQuantity__c, Ruby__NetSalesPrice__c * Ruby__ActualQuantity__c ) - ( ELV_OEM_Fee__c / ELV_ProrateMultiplier__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annualized recurring revenue for this line, net of the annualized OEM fee for eligible third-party products. Summary Items return 0.</inlineHelpText>
    <label>ARR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>