objects/QuoteLineItem/fields/ELV_Backsolve_Goal__c.field-meta.xml
<CustomField>
    <fullName>ELV_Backsolve_Goal__c</fullName>
    <label>Backsolve Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>