objects/QuoteLineItem/fields/ELV_BillingQuoteLineNetTotal__c.field-meta.xml
<CustomField>
    <fullName>ELV_BillingQuoteLineNetTotal__c</fullName>
    <formula>IF( ELV_Bundle__c, ELV_PackageTotal__c, IF (ELV_Bundled_Product__c || (TEXT(ELV_OptionType__c)=&quot;Component&quot; || TEXT(ELV_OptionType__c)=&quot;Accessory&quot;),0, Ruby__TotalPrice__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Quote Line Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>