objects/QuoteLineItem/fields/ELV_Boomi_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Boomi_Start_Date__c</fullName>
    <formula>Ruby__SubscriptionStartDate__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boomi Start Date</label>
    <type>Date</type>
</CustomField>