objects/QuoteLineItem/fields/ELV_Bundle__c.field-meta.xml
<CustomField>
    <fullName>ELV_Bundle__c</fullName>
    <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
    <formula>IF( ISPICKVAL(Product2.Ruby__ProductRecordType__c, &quot;Bundle&quot;), TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package</label>
    <type>Checkbox</type>
</CustomField>