objects/QuoteLineItem/fields/ELV_Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Bundle_Type__c</fullName>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Taas</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>