objects/QuoteLineItem/fields/ELV_Bundled_Product__c.field-meta.xml
<CustomField>
    <fullName>ELV_Bundled_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundled Product</label>
    <type>Checkbox</type>
</CustomField>