objects/QuoteLineItem/fields/ELV_CARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_CARR__c</fullName>
    <label>DEPRECATED - CARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>