objects/QuoteLineItem/fields/ELV_Change_from_Programmatic_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Change_from_Programmatic_Discount__c</fullName>
    <label>Change from Programmatic Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>