objects/QuoteLineItem/fields/ELV_Changed_Subscription__c.field-meta.xml
<CustomField>
    <fullName>ELV_Changed_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscription that this change-order quote line is changing. Populated from the Nue Change Asset ID on the summary line (SUB-&lt;number&gt;_&lt;version&gt;).</description>
    <inlineHelpText>Subscription that this change-order quote line is changing. Populated from Nue Change Asset ID on the summary line.</inlineHelpText>
    <label>Changed Subscription</label>
    <referenceTo>Ruby__Subscription__c</referenceTo>
    <relationshipLabel>Changed Quote Lines</relationshipLabel>
    <relationshipName>Changed_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>