objects/QuoteLineItem/fields/ELV_COE_Approval_Needed_SKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_COE_Approval_Needed_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COE Approval Needed SKU</label>
    <type>Checkbox</type>
</CustomField>