objects/QuoteLineItem/fields/ELV_ComponentListTotal__c.field-meta.xml
<CustomField>
    <fullName>ELV_ComponentListTotal__c</fullName>
    <description>TNCI-97</description>
    <label>Component List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>