objects/QuoteLineItem/fields/ELV_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Discount__c</fullName>
    <label>ADDT&apos;L DISCOUNT (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>