objects/QuoteLineItem/fields/ELV_Customer_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Discount_Amount__c</fullName>
    <label>Discount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>