objects/QuoteLineItem/fields/ELV_Customer_Discount_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Discount_Amount_Total__c</fullName>
    <description>ELV: Used to aggregate additional discount</description>
    <formula>IF( OR(
    ISBLANK(ELV_Customer_Discount__c),
    ELV_Customer_Discount__c = 0),0,

    Ruby__Subtotal__c - (Ruby__Subtotal__c * (1 - ELV_Customer_Discount__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Discount Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>