objects/QuoteLineItem/fields/ELV_Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Price__c</fullName>
    <formula>Ruby__SalesPrice__c - (Ruby__SalesPrice__c *  ELV_Customer_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>