objects/QuoteLineItem/fields/ELV_Customer_Price_ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Price_ARR_Amount__c</fullName>
    <description>TNCI-206 / ELV-DM-010. Nue port of CPQ price action 468 on rule &apos;04.10.24 ARR Amount QuoteLine version 3&apos;: pricing-schedule variance path when a Tanium Pricing Schedule is attached, otherwise Customer Price x quantity / prorate multiplier, zero when excluded from ARR. Mirrors ELV_ARR_Amount__c on Customer Price. Adds Summary Item and zero-divisor guards absent from CPQ. CPQ header Customer_Price_ARR__c deliberately NOT ported. TNCI-139 / ELV-CPQ-036 Step 1: exclusion gate repointed to line-local ELV_Product_Exclude_from_ARR__c. Step 2: pricing-schedule test repointed to stored checkbox ELV_Has_Tanium_Pricing_Schedule__c so no lookup reference remains. Logic unchanged.</description>
    <formula>IF( OR( ELV_Exclude_from_ARR__c, ELV_Product_Exclude_from_ARR__c, ISPICKVAL( Ruby__LineType__c, &quot;SummaryItem&quot; ), ELV_ProrateMultiplier__c = 0 ), 0, IF( ELV_Has_Tanium_Pricing_Schedule__c, ( ELV_Unit_Price_Variance__c * Ruby__ActualQuantity__c ) / ELV_ProrateMultiplier__c, ( ELV_Customer_Price__c * Ruby__ActualQuantity__c ) / ELV_ProrateMultiplier__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annualized ARR based on Customer Price. Zero when the line is excluded from ARR or is a Summary Item.</inlineHelpText>
    <label>Customer Price ARR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>