objects/QuoteLineItem/fields/ELV_Customer_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Unit_Price__c</fullName>
    <label>DEPRECATED - Customer Unit-Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>