objects/QuoteLineItem/fields/ELV_Day_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Day_1_ARR__c</fullName>
    <description>TNCI-139 / ELV-CPQ-036. Deterministic CPQ-faithful Day 1 ARR formula. Returns ELV_ARR_Amount__c when the line is not excluded and spans the maintained line-local Day 1 start-date stamp; otherwise 0. No cross-object references; eligible as a Quote roll-up source.</description>
    <formula>IF( AND( NOT( ELV_Exclude_from_ARR__c ), NOT( ISBLANK( ELV_Day_1_ARR_Start_Date_Stamp__c ) ), NOT( ISBLANK( Ruby__SubscriptionStartDate__c ) ), Ruby__SubscriptionStartDate__c &lt;= ELV_Day_1_ARR_Start_Date_Stamp__c, IF( NOT( ISBLANK( ELV_Effective_End_Date__c ) ), ELV_Effective_End_Date__c, Ruby__SubscriptionEndDate__c ) &gt;= ELV_Day_1_ARR_Start_Date_Stamp__c ), ELV_ARR_Amount__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annualized ARR contributed by this line on the Quote Day 1 ARR start date.</inlineHelpText>
    <label>Day 1 ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>