objects/QuoteLineItem/fields/ELV_Deal_Desk_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deal_Desk_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Desk Approval Needed</label>
    <type>Checkbox</type>
</CustomField>