objects/QuoteLineItem/fields/ELV_Deployment_Method__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deployment_Method__c</fullName>
    <formula>IF(
	    ISBLANK(Product2.Ruby__OriginalProduct__c),
	    TEXT(Product2.Deployment_Method__c),
	    TEXT(Product2.Ruby__OriginalProduct__r.Deployment_Method__c)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Method</label>
    <type>Text</type>
</CustomField>