objects/QuoteLineItem/fields/ELV_Discount_Percent_Display__c.field-meta.xml
<CustomField>
    <fullName>ELV_Discount_Percent_Display__c</fullName>
    <description>TNCI-97 - Creating field as placeholder to develop quote templates (JW 7/21) - will update field formula</description>
    <formula>33</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>