objects/QuoteLineItem/fields/ELV_Distribution_Involvement_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Distribution_Involvement_Discount__c</fullName>
    <label>Distribution Involvement Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>