objects/QuoteLineItem/fields/ELV_DistributorPrice__c.field-meta.xml
<CustomField>
    <fullName>ELV_DistributorPrice__c</fullName>
    <label>Distributor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>