objects/QuoteLineItem/fields/ELV_Earliest_NonZero_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Earliest_NonZero_Start_Date__c</fullName>
    <formula>IF(Ruby__ActualQuantity__c &gt;0,Ruby__SubscriptionStartDate__c , Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest NonZero Start Date</label>
    <type>Date</type>
</CustomField>