objects/QuoteLineItem/fields/ELV_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>