objects/QuoteLineItem/fields/ELV_Effective_Quantity_EDW__c.field-meta.xml
<CustomField>
    <fullName>ELV_Effective_Quantity_EDW__c</fullName>
    <label>Effective Quantity (EDW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>