objects/QuoteLineItem/fields/ELV_Eligible_for_Renewal_ARR_Flow__c.field-meta.xml
<CustomField>
    <fullName>ELV_Eligible_for_Renewal_ARR_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Renewal ARR (Flow)</label>
    <type>Checkbox</type>
</CustomField>