objects/QuoteLineItem/fields/ELV_Eligible_Tanium_SoftwareARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Eligible_Tanium_SoftwareARR__c</fullName>
    <formula>AND(
  OR(
    ELV_ProductFamily__c = &quot;Bundle&quot;,
    ELV_ProductFamily__c = &quot;Module&quot;,
    ELV_ProductFamily__c = &quot;Core&quot;
  ),
  LEFT(Ruby__ProductSKU__c, 4) = &quot;TAN-&quot;,
  ELV_Exclude_from_ARR__c = FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible Tanium Software ARR</label>
    <type>Checkbox</type>
</CustomField>