objects/QuoteLineItem/fields/ELV_End_customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_customer_Discount__c</fullName>
    <formula>IF(ELV_ProratedListPrice__c = 0,0,( ELV_ProratedListPrice__c * Ruby__ActualQuantity__c -  ELV_Quote_Net_Total__c )/ (ELV_ProratedListPrice__c * Ruby__ActualQuantity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>