objects/QuoteLineItem/fields/ELV_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_Date__c</fullName>
    <description>TNCI-97</description>
    <formula>IF( Product2.Do_Not_Show_End_Date__c = TRUE, NULL,If(ISBLANK( Ruby__SubscriptionEndDate__c),If(ISBLANK(Quote.Ruby__SubscriptionEndDate__c) , ELV_End_Date_Formula__c -1,Quote.Ruby__SubscriptionEndDate__c),Ruby__SubscriptionEndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Comp</label>
    <type>Date</type>
</CustomField>