objects/QuoteLineItem/fields/ELV_End_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_Date_Date__c</fullName>
    <label>End Date (Date)</label>
    <type>Date</type>
</CustomField>