objects/QuoteLineItem/fields/ELV_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_Date_Formula__c</fullName>
    <description>TNCI-97</description>
    <formula>If( Ruby__SubscriptionTerm__c &gt; 0,
DATE( 
YEAR(Ruby__SubscriptionStartDate__c) 
+ FLOOR((MONTH(Ruby__SubscriptionStartDate__c) + Ruby__SubscriptionTerm__c  -1)/12) + IF(AND(MONTH(Ruby__SubscriptionStartDate__c )=12,3&gt;=12),-1,0) 
, 
IF( MOD( MONTH(Ruby__SubscriptionStartDate__c ) + Ruby__SubscriptionTerm__c , 12 ) = 0, 12 , MOD( MONTH(Ruby__SubscriptionStartDate__c) + Ruby__SubscriptionTerm__c  , 12 )) 
, 
MIN( 
DAY(Ruby__SubscriptionStartDate__c), 
CASE( 
MAX( MOD( MONTH(Ruby__SubscriptionStartDate__c ) + Ruby__SubscriptionTerm__c  , 12 ) , 1), 
9,30, 
4,30, 
6,30, 
11,30, 
2,IF(MOD((year(Ruby__SubscriptionStartDate__c ) 
+ FLOOR((MONTH(Ruby__SubscriptionStartDate__c) + Ruby__SubscriptionTerm__c )/12) + IF(AND(MONTH(Ruby__SubscriptionStartDate__c )=12,Ruby__SubscriptionTerm__c  &gt;=12),-1,0)),4)=0,29,28), 
31 
) 
) 
), Quote.ELV_ContractEndDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Calc</label>
    <type>Date</type>
</CustomField>