objects/QuoteLineItem/fields/ELV_EndDateCompEDW__c.field-meta.xml
<CustomField>
    <fullName>ELV_EndDateCompEDW__c</fullName>
    <label>End Date Comp (EDW)</label>
    <type>Date</type>
</CustomField>