objects/QuoteLineItem/fields/ELV_ESO_Days__c.field-meta.xml
<CustomField>
    <fullName>ELV_ESO_Days__c</fullName>
    <label>ESO Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>