objects/QuoteLineItem/fields/ELV_ESO_Terms__c.field-meta.xml
<CustomField>
    <fullName>ELV_ESO_Terms__c</fullName>
    <label>ESO Terms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>