objects/QuoteLineItem/fields/ELV_ESR_List_Total__c.field-meta.xml
<CustomField>
    <fullName>ELV_ESR_List_Total__c</fullName>
    <label>ESR List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>