objects/QuoteLineItem/fields/ELV_Exclude_from_Addl_Disc_Calc__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exclude_from_Addl_Disc_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Addl Disc Calc</label>
    <type>Checkbox</type>
</CustomField>