objects/QuoteLineItem/fields/ELV_Exclude_from_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exclude_from_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from ARR</label>
    <type>Checkbox</type>
</CustomField>