objects/QuoteLineItem/fields/ELV_Exit_Arr_Only__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exit_Arr_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit Arr Only</label>
    <type>Checkbox</type>
</CustomField>