objects/QuoteLineItem/fields/ELV_f_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_f_Partner_Discount__c</fullName>
    <formula>ELV_PartnerDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>